# BorderRegion_KDE

./: .env  .gitignore  README.md  pyproject.toml
src/: get_dotenv.py  index.py  main.py  ui.py  ui_state.py
src/CountryCodes/: country_abbreviations.py  lst_of_cntr_od.py
src/DummyData/: pt_es_dummy_data_borders.gpkg
src/KDE/: kde_all_country_pairs.py  kde_country_organizer.py  kde_data.py  kde_handler.py  kde_questions.py  kde_visualizer.py
src/MakerOfDammyData/: dummy_data_maker.py
src/OutputFolder/output_all/: output.md
src/Preprocess/: H3_coordinate_convertion_to_LatLon.py  H3_questions.py  distance_calculator.py  distance_questions.py  read_in_data_for_preprocess.py
src/StandaloneKDE/: kde_all_country_pairs.py  merged_map_of_all_kdes.py  standaloneKDE.py
